sdx6ue_ue3/kubernetes/secure-deployments/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-db
  namespace: default
  labels:
    app: recipe-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipe-db
  template:
    metadata:
      labels:
        app: recipe-db
    spec:
      containers:
      - name: postgres
        image: postgres:16.8-alpine3.21
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
