sdx6ue_ue3/kubernetes/secure-deployments/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: recipe-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
