sdx6ue_ue3/kubernetes/secure-deployments/recipe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: recipe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipe-service
            port:
              number: 8080
